# makeXcmakeXmesonXgn

./: .gn  BUILD.gn  CMakeLists.txt  LICENSE  Makefile  README.md  build-cmake.sh  build-gn.sh  build-make.sh  build-meson.sh  helloworld-123.c  helloworld.c  helloworld.h  helloworld_dbg.h  meson.build  pipe2.c  test.mk
Kconfig-123/: .config  Kconfig  config.h  helper_Kconfig.md
Kconfig-123/select_example/: Kconfig
confs/: simple.conf  simple_aarch64.conf  simple_i486.conf  simple_x86.conf
confs/common/: common.conf  xflags.conf
cppTest/: BUILD.gn  cppCaller.cpp  cppHelloWorld.cpp  cppHelloWorld.h  cppHelloWorldv2.cpp
gnX/: BUILD.gn  BUILDCONFIG.gn
gnX/toolchain/: BUILD.gn  BUILD_aarch64.gn  BUILD_i486.gn  BUILD_x86.gn
meson_public/: build_aarch64.meson  build_mipsel.meson  meson.build  meson_options.txt
