print(">> 03 - cppTest/BUILD.gn")

#** librarys **
static_library("cppHelloWorld") {
  sources = [
    "cppHelloWorld.cpp",
    "cppHelloWorld.h",
  ]

  output_name = "cppHelloWorld"

  # -DPJ_LANKA520
  defines = [ "PJ_LANKA520V8" ]

  if ( is_debug == true )
  {
    print(">> shared_library / cppHelloWorld - $configs")
  }
}

#** Target (CLEAN_BINS) **

#** Target (DUMMY_BINS) **

# must have an executable("cppTest") <-> foldername("cppTest")
executable("cppTest") {
  print_stack_trace()

  sources = [
    "cppHelloWorldv2.cpp",
  ]

  output_name = "cppHelloWorldv2"

  defines = [ "PJ_LANKA520V7" ]
  include_dirs = [ "//cppTest" ]

  if ( is_debug == true )
  {
    print(">> executable / cppTest - $configs")
  }
}

executable("cppCaller") {
  sources = [
    "cppCaller.cpp",
  ]

  deps = [
    ":cppHelloWorld",
  ]

  defines = [ "PJ_LANKA520V6" ]
  include_dirs = [ "//cppTest" ]

  if ( is_debug == true )
  {
    print(">> executable / cppCaller - $configs")
  }
}
