# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("compiler_defaults") {
  if (current_os == "linux") {
    cflags = [
      "-g"
      ,"-Wall"
      ,"-O2"
      ,"-fPIC"
      ,"-D_GNU_SOURCE"
      ,"-Wformat-truncation=0"
      ,"-Wno-unused-value"
      ,"-Wno-unused-result"
      ,"-Wno-format-truncation"
      ,"-I./"
   ]
  }

  print(">> {cflags: $cflags}")
}

config("executable_ldconfig") {
  if (!is_mac) {
    ldflags = [
      "-Wl,-rpath=./"
      ,"-L./"
    ]
  }
}
