print(">> 03 - gnX/BUILD.gn")

# https://gn.googlesource.com/gn/+/main/docs/reference.md#func_config
config("compiler_defaults") {
  cflags = [
    "-D_GNU_SOURCE"
    ,"-Wformat-truncation=0"
    ,"-Wno-unused-value"
    ,"-Wno-unused-result"
    ,"-Wno-format-truncation"
  ]
  cflags_c = [
  ]
  include_dirs = [
    "//"
  ]

  defines = [ "PJ_LANKA520V0" ]

  if ( is_debug == true )
  {
    print(">> {cflags: $cflags}")
    print(">> {defines: $defines}")
  }
}

config("executable_ldconfig") {
  if (!is_mac) {
    ldflags = [
      "-Wl,-rpath=./"
      ,"-L./"
    ]
  }

  defines = [ "PJ_LANKA520V9" ]

  if ( is_debug == true )
  {
    print(">> {ldflags: $ldflags}")
    print(">> {defines: $defines}")
  }
}
