if (target_os == "") {
  target_os = host_os
}

target_cpu = getenv("PJ_TARGET")
if (target_cpu == "") {
  target_cpu = host_cpu
}
if (current_cpu == "") {
  current_cpu = target_cpu
}
if (current_os == "") {
  current_os = target_os
}

print(">> {target_os: $target_os}")
print(">> {target_cpu: $target_cpu}")
print(">> {current_cpu: $current_cpu}")
print(">> {current_os: $current_os}")

PJ_HOST = getenv("PJ_HOST")
print(">> {PJ_HOST: $PJ_HOST}")
if (PJ_HOST != "")
{
  PJ_CROSS = "${PJ_HOST}-"
  print(">> {PJ_CROSS: $PJ_CROSS}")
}

is_linux = host_os == "linux" && current_os == "linux" && target_os == "linux"
is_mac = host_os == "mac" && current_os == "mac" && target_os == "mac"

# All binary targets will get this list of configs by default.
_shared_binary_target_configs = [ "//gnX:compiler_defaults" ]

# Apply that default list to the binary target types.
set_defaults("executable") {
  configs = _shared_binary_target_configs

  # Executables get this additional configuration.
  configs += [ "//gnX:executable_ldconfig" ]
}
set_defaults("static_library") {
  configs = _shared_binary_target_configs
}
set_defaults("shared_library") {
  configs = _shared_binary_target_configs
}
set_defaults("source_set") {
  configs = _shared_binary_target_configs
}

if (target_cpu == "aarch64")
{
  set_default_toolchain("//gnX/toolchain:aarch64")
}
else if (target_cpu == "mipsel")
{
  set_default_toolchain("//gnX/toolchain:mipsel")
}
else
{
  set_default_toolchain("//gnX/toolchain:x86")
}